feat: 更新优化方案文档

--- a/web-packages/demo/public/探一下 语音输入 - 音效氛围光.md
+++ b/web-packages/demo/public/探一下 语音输入 - 音效氛围光.md
@@ -1,69 +1,36 @@
 第一阶段：监听状态
-
 纹理从右往左移动200单位
-
 总时长3.4秒
-
 0~0.6秒：渐显（透明度0->1）
-
 2.4~3.4秒：渐隐（透明度1->0）
-
 期间监听音量
-
 如果音量在2.4s渐隐开始时超过阈值→在3.4s时触发第二阶段
-
 如果音量在2.4s时没有超过阈值->在2.4s出发循环第一次循环继续消隐并且和第二次循环的渐显进行透明度混合，以此类推
 
-
-
 第二阶段：音乐输入阶段
-
 1号纹理继续从右向左移动400单位，2.4s
-
 0~0.4s渐显（透明度0->1）
-
 1.9~2.4s渐隐（透明度1->0）
-
 0.5s的时候，在最右边生成2号纹理，也做同样的移动（2.4s, 400单位）
 
-
-
 0.5~1s：2号纹理渐显（透明度0->1）
-
 1.9~2.4s: 2号纹理渐隐（透明度1->0）
-
 两个纹理透明度混合
-
-
 
 在1.9s时（A与B都处于消隐期）时检测音量
 
-
-
 如果音量 > threshold，立刻再次进入第二阶段、
-
 循环第二阶段：新的纹理从右到左滑入，透明度混合显示，老的继续消失，新的继续渐显
-
 如果音量 ≤ threshold，在消隐过程中完成后结束第二阶段流程
-
 如果刚进入消隐，等消隐结束
-
 渐显期，则等待渐显完成直接进入消隐
-
 如果在全显，则直接进入消隐
 
-
-
 实现参考
-
 以下是基于你描述的音频监听/触发逻辑实现：TS部分负责音频状态机驱动、纹理淡入淡出与切换，Shader部分负责波形渲染与透明度采样，支持多纹理Alpha混合。整体方案兼容WebGL1，结构清晰。
 
----
-
-## 1. TypeScript 音频状态与控制部分
+1. TypeScript 音频状态与控制部分
 先定义状态枚举，监听音量并根据时序/阈值驱动第一、二阶段流程，控制两张（或多张）纹理的运动与透明度混合。
-
-```typescript
 // 阶段定义
 enum MainStage { Listening, Input, Stop }
 enum TexFadeStage { Hidden, FadingIn, Showing, FadingOut }
@@ -272,11 +239,7 @@ class TextureController {
     this.onUpdate(this.textures);
   }
 }
-```
-
-在渲染主循环里，根据`TextureController`的输出动态设置每张纹理的shader uniform：
-
-```typescript
+在渲染主循环里，根据TextureController的输出动态设置每张纹理的shader uniform：
 let controller = new TextureController();
 let lastTime = performance.now();
 function renderLoop(now: number, volume: number) {
@@ -293,19 +256,12 @@ function renderLoop(now: number, volume: number) {
   });
   requestAnimationFrame(now => renderLoop(now, getAudioVolume()));
 }
-```
-
-配合每个纹理的material传给shader对应的uniform。如果一个shader同时支持两张纹理混合，可以设第二份参数（_Alpha2/_TextureX2等）；否则分两draw call实现混合。  
+配合每个纹理的material传给shader对应的uniform。如果一个shader同时支持两张纹理混合，可以设第二份参数（_Alpha2/_TextureX2等）；否则分两draw call实现混合。
 音量来自getAudioVolume()（你可用已集成的AudioStateMachine输出）。
 
----
-
-## 2. Shader 支持动态横移及多纹理透明度混合
+2. Shader 支持动态横移及多纹理透明度混合
 核心点是**（1）支持横向偏移，（2）支持Alpha淡入淡出，（3）支持叠加混合**。
-
 假设同一shader渲染两张图，通过两个uniform（_OffsetA, _OffsetB）和(_AlphaA, _AlphaB)传入。
-
-```glsl
 precision highp float;
 varying vec2 uv;
 uniform float _OffsetA, _OffsetB;
@@ -329,88 +285,51 @@ void main() {
   gl_FragColor = colorA + colorB * (1.0 - colorA.a);
   // 你也可以用加法等其他方式混合
 }
-```
-
-更通用处理可进一步抽象成数组uniform循环。  
+更通用处理可进一步抽象成数组uniform循环。
 如果只渲染一张纹理（无第二阶段）可只赋值A相应的参数。
 
----
+3. 关键点小结
+● TS端精确驱动阶段、每张纹理的位置和透明，通过uniform同步到Shader。
+● Shader通过偏移和Alpha通道实现律动横移+消隐，支持两张图叠加混合。
+● 可用你的UI面板实时调参数。
+● 音量检测阈值由controller.volumeThreshold控制，记得参数化。
+● onUpdate钩子可用于同步动画状态到渲染和UI。
 
-## 3. 关键点小结
-+ TS端精确驱动阶段、每张纹理的位置和透明，通过uniform同步到Shader。
-+ Shader通过偏移和Alpha通道实现律动横移+消隐，支持两张图叠加混合。
-+ 可用你的UI面板实时调参数。
-+ 音量检测阈值由controller.volumeThreshold控制，记得参数化。
-+ `onUpdate`钩子可用于同步动画状态到渲染和UI。
-
----
-
-你可以把controller和render部分集成到你现有的音频状态管理逻辑内。  
+你可以把controller和render部分集成到你现有的音频状态管理逻辑内。
 如需更复杂的多轮叠加，也可动态扩展controller.textures数组、shader支持更多层透明累加。
 
----
-
-如需完整集成demo和具体接口封装，请补充所用素材和UI/引擎架构。  
+如需完整集成demo和具体接口封装，请补充所用素材和UI/引擎架构。
 如需任意一侧（TS/Shader/集成）细致代码片段解释可再补充。
 
 
-
-
-
 现在任务需要修改的
+https://yuque.antfin.com/houzhenni.hzn/kb/ak4ba3kmntn5ymm1?singleDoc#沟通问题
 
-[https://yuque.antfin.com/houzhenni.hzn/kb/ak4ba3kmntn5ymm1?singleDoc#](https://yuque.antfin.com/houzhenni.hzn/kb/ak4ba3kmntn5ymm1?singleDoc#)沟通问题
-
-
-
-## 一、阶段一：只有蓝光的部分
+一、阶段一：只有蓝光的部分
 整体图形的边缘可以再模糊一些，目前看起来形状还是较为明显
-
-![](https://intranetproxy.alipay.com/skylark/lark/0/2025/png/33856458/1754329834071-2f9ab776-3b3b-4f6f-921d-5edb91ed9c84.png)
 
 1.抄一个ae原文件的第一阶段
 
-
-
-## 二、阶段二：蓝绿光
+二、阶段二：蓝绿光
 1. 蓝色光和绿色光，在左侧起始的部分，顶部的部分过度比较僵硬，边缘过于清晰，也是希望更加模糊，参考绿色的部分
-
-![](https://intranetproxy.alipay.com/skylark/lark/0/2025/png/33856458/1754330063857-af986aaf-ea5b-429a-ad0d-742403a38c70.png)    ![绿色圈内的过渡就比较自然](https://intranetproxy.alipay.com/skylark/lark/0/2025/png/33856458/1754330213880-0ead3497-b417-4e54-b824-388d63b3e681.png)
-
-**初步感觉应该是ae原版本有一个框的高斯模糊效果，为准备给弄到ge里面做一个实现参考**
-
-
+    
+初步感觉应该是ae原版本有一个框的高斯模糊效果，为准备给弄到ge里面做一个实现参考
 
 2. 来回交替时，会有左右晃动的视感，最好整体都遵循 蓝绿色光 向左侧移动。
 
+ 这个是时间轴问题，可能和ae时间轴没有完全对齐（比如ae的纹理的初始位置不能完全转换到shader uv到问题），导致有差异。
+所以我需要给初始位置暴露出来可以快速调整
 
+三、动态语音接入的样式规则
+Max值：可以给个参考单位
+高度规则&图片 待补充
 
- **这个是时间轴问题，可能和ae时间轴没有完全对齐（比如ae的纹理的初始位置不能完全转换到shader uv到问题），导致有差异。**
+Mix值：可以给个参考单位
+高度规则&图片 待补充
 
-**所以我需要给初始位置暴露出来可以快速调整**
-
-****
-
-## **三、动态语音接入的样式规则**
-**Max值：可以给个参考单位**
-
-**高度规则&图片 待补充**
-
-****
-
-**Mix值：可以给个参考单位**
-
-**高度规则&图片 待补充**
-
-****
-
-**将扰动和高低的参数暴露出来，并且告诉他们含义，我到设计工位和他们一起调整获取一个参考值**
-
-**还包括问题二的时间轴对齐的问题**
+将扰动和高低的参数暴露出来，并且告诉他们含义，我到设计工位和他们一起调整获取一个参考值
+然后将大部分参数都找到默认值，然后将关键参数拿出来参数化使用
+还包括问题二的时间轴对齐的问题
 
 
 
-## 
-
-
-## 
